--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,26 +19,36 @@
 </head>
 <body>
 
-  Learn to code by watching others
+  <main>
+    <header>
+        <h2>Learn to code by watching others</h2>
+        <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+          but understanding how developers think is invaluable.</p>
+    </header>
+    <section class="content">
+      <div class="describe_price ">
+        <p><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
+      </div>
+      <div class="myForm">
+        <input type="text" class="input-form" placeholder="First Name">
+        <p class="msg-error">First Name cannot be empty</p>
+        <input type="text" class="input-form" placeholder="Last Name">
+        <p class="msg-error">Last Name cannot be empty</p>
+        <input type="email" class="input-form" placeholder="Email Address">
+        <p class="msg-error">Looks like this is not an email</p>
+        <input type="password" class="input-form" placeholder="Password">
+        <p class="msg-error">Password cannot be empty</p>
+        <button type="submit">Claim your free trial</button>
+        <p id="btn-description">By clicking the button, you are agreeing to our <span id="terms">Terms and Services</span></p>
+      </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+    </section>
+  </main> 
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Abdelhadi</a>.
     </p>
   </footer>
 </body>
